# ZAiSD

./: CMakeLists.txt
lab1/: list.txt  main.cpp  matrix.txt  notes.txt
lab2/: list.txt  list2.txt  main.cpp  matrix.txt  matrix2.txt
lab3/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
lab4/: main.cpp
lab5/: decoded.txt  decoder.cpp  encoded.txt  encodedArray.txt  encoder.cpp
